--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-shimmer-effect": "^1.0.9",
     "react-toastify": "^5.4.1",
     "reactotron-react-js": "^3.3.2",
     "reactotron-redux": "^3.1.1",
